log
Sun Apr 10 19:07:52 UTC 2022: 
 tests:  0|6
total_score: 0/70
70b155c
Sun Apr 10 20:21:47 UTC 2022: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘Hashmap’; did you mean ‘HashMap’?
   Hashmap* aux = (Hashmap*)malloc(capacity * sizeof(Hashmap));
   ^~~~~~~
   HashMap
hashmap.c:55:19: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   Hashmap* aux = (Hashmap*)malloc(capacity * sizeof(Hashmap));
                   ^~~~~~~
                   HashMap
hashmap.c:55:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:27: error: expected expression before ‘)’ token
   Hashmap* aux = (Hashmap*)malloc(capacity * sizeof(Hashmap));
                           ^
hashmap.c:56:6: error: request for member ‘buckets’ in something not a structure or union
   aux->buckets = (Pair*)calloc(capacity, sizeof(Hashmap*));
      ^~
hashmap.c:56:57: error: expected expression before ‘)’ token
   aux->buckets = (Pair*)calloc(capacity, sizeof(Hashmap*));
                                                         ^
hashmap.c:59:6: error: request for member ‘current’ in something not a structure or union
   aux->current = -1;
      ^~
hashmap.c:61:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return aux;
          ^~~
cc1: all warnings being treated as errors
Compilation failed
ba9c0d1
Sun Apr 10 20:23:41 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
730be95
Sun Apr 10 20:24:19 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
e0d087a
Sun Apr 10 20:32:22 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b2762bb
Sun Apr 10 20:34:36 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
cde9762
Sun Apr 10 20:35:15 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0b3b42d
Sun Apr 10 20:35:49 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7457c1d
Sun Apr 10 20:38:22 UTC 2022: 
 hashmap.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  1|5
total_score: 10/70
2e88e59
Sun Apr 10 21:12:41 UTC 2022: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:18: error: passing argument 1 of ‘hash’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   int pos = hash(map, key);
                  ^~~
hashmap.c:26:6: note: expected ‘char *’ but argument is of type ‘HashMap * {aka struct HashMap *}’
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:43:23: error: passing argument 2 of ‘hash’ makes integer from pointer without a cast [-Werror=int-conversion]
   int pos = hash(map, key);
                       ^~~
hashmap.c:26:6: note: expected ‘long int’ but argument is of type ‘char *’
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:43:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   int pos = hash(map, key);
       ^~~
cc1: all warnings being treated as errors
Compilation failed
3bee40d
Sun Apr 10 21:13:17 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   int pos = hash(key, map->capacity);
       ^~~
cc1: all warnings being treated as errors
Compilation failed
5190faf
Sun Apr 10 21:19:31 UTC 2022: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:15: error: comparison between pointer and integer [-Werror]
     while(pos != NULL){
               ^~
cc1: all warnings being treated as errors
Compilation failed
299301f
Sun Apr 10 21:19:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:11: error: ‘buckets’ undeclared (first use in this function)
     while(buckets[pos] != NULL){
           ^~~~~~~
hashmap.c:46:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a4e66b5
Sun Apr 10 21:20:06 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
80ea7f5
Sun Apr 10 21:29:39 UTC 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
874e4d7
Sun Apr 10 21:30:27 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|5
total_score: 20/70
ea52999
Sun Apr 10 21:38:54 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
b4b4a7e
Sun Apr 10 23:35:52 UTC 2022: 
 tests:  5|4
total_score: 30/70
76b691c
Sun Apr 10 23:36:49 UTC 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  8|3
total_score: 40/70
2b28f3e
Sun Apr 10 23:46:04 UTC 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
745c3d5
Sun Apr 10 23:59:12 UTC 2022: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘eraseMap’:
hashmap.c:87:15: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   map->buckets[i]->key=NULL;
               ^
cc1: all warnings being treated as errors
Compilation failed
0453245
Mon Apr 11 00:05:32 UTC 2022: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  0|0
7051884
Mon Apr 11 00:07:10 UTC 2022: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  12|2
total_score: 50/70
9839644
Mon Apr 11 00:08:42 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
b6903e2
Mon Apr 11 00:11:06 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
56421fc
Mon Apr 11 00:12:48 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|2
total_score: 50/70
56887cf
Mon Apr 11 00:13:32 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
06e1e2a
Mon Apr 11 00:14:31 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
82ad92d
Mon Apr 11 00:14:43 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
304839b
Mon Apr 11 00:15:30 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
66bd9a2
Mon Apr 11 00:15:45 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
b3dbb95
Mon Apr 11 00:31:17 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
77e17ba
Mon Apr 11 00:38:15 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
ae45331
Mon Apr 11 00:57:12 UTC 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
ec248b5
Mon Apr 11 01:06:44 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
9f89ab9
Mon Apr 11 01:07:50 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
daf6005
Mon Apr 11 01:11:30 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:19: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   Pair* oldBuck = map->buckets;
                   ^~~
hashmap.c:80:52: error: invalid type argument of ‘->’ (have ‘Pair {aka struct Pair}’)
     insertMap(aux, map->buckets[i]->key, oldBuck[i]->value);
                                                    ^~
cc1: all warnings being treated as errors
Compilation failed
82976dc
